<resources>
    <string name="app_name">CurlyBananasMessenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_contact_chat_ui">Name of contact</string>
    <string name="write_message_hint">Write message...</string>
    <string name="btn_send_text">Send</string>
    <string name="text_in_chat_container">Testing a message here to display the content of it...</string>
    <string name="tv_contacts">My contacts</string>
    <string name="et_search">Search contacts...</string>
    <string name="et_contact_id">Write contact id</string>
    <string name="et_contact_name">Write contact name</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="item_my_profile">My Profile</string>
    <string name="item_my_conversations">My Conversations</string>
    <string name="item_my_contacts">Contacts</string>
    <string name="item_add_contact">Add Contact</string>
    <string name="item_logout">Logout</string>
    <string name="et_contact_email">Write contact e-mail</string>
    <string name="btn_add_contact">Add to contacts</string>
    <string name="et_change_name">Write a new name</string>
    <string name="btn_save_profile">Save changes</string>
    <string name="btn_log_out">Log out</string>
    <string name="profile_name_label">Name:  </string>
    <string name="profile_email_label">E-mail:  </string>
    <string name="profile_date_label">Date of join:  </string>
    <string name="back_button">Back  </string>
</resources>