<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/name_of_contact_chat_ui"
        android:gravity="center"
        android:textSize="28sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_chat_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:gravity="start"
            android:textColorHint="@color/black"
            android:hint="@string/write_message_hint"
            android:minHeight="50dp"
            android:padding="10dp" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_gravity="end"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_text" />
    </LinearLayout>

</FrameLayout>
